fix contributors spacing

--- a/res/static/css/styles.css
+++ b/res/static/css/styles.css
@@ -422,7 +422,7 @@ input {
 	text-align: left;
 	position: absolute;
 	right: calc(50vw - 625px);
-	top: 295px;
+	top: 201px;
 }
 #footer, #header-links {
 	text-align: center;
